Fix Firebase rewrite rule and update register.html

--- a/public/register.html
+++ b/public/register.html
@@ -20,7 +20,7 @@
                 <h1 class="text-lg font-headline tracking-wider truncate">SISTEMA DE GESTION DE CONSULTAS TECNICAS OACEF-DMID-DIRIS/LS</h1>
             </div>
             <div class="flex items-center gap-4">
-                <a class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2" href="/admin-login.html">
+                <a class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2" href="admin-login.html">
                     Acceso Personal
                 </a>
             </div>
